# mrdesouzaphd-cmyk

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.validation  README.md  cloudbuild.yaml  pyproject.toml
ai_processing/: content_processor.py  image_processor.py  validation_service.py  validation_workflow.py  video_processor.py
backend/api/: main.py  routes.py
backend/models/: database.py  schemas.py
backend/services/: distribution.py  integrations.py  platform_formatter.py  pubsub.py  storage.py
config/: settings.py
ebook_generator/: generator.py
ebook_generator/templates/: pdf_template.html
frontend/: app.py
frontend/static/css/: main.css
frontend/static/js/: main.js
frontend/templates/: index.html  store.html  upload.html
infrastructure/: main.tf  terraform.tfvars.example
tests/: test_content_processor.py  test_platform_formatter.py  test_validation_workflow.py
